<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="@dimen/element_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/publish_post_description"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editText_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="20"
            android:layout_marginBottom="@dimen/element_margin"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextMultiLine_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="6"
            android:maxLines="10"
            android:hint="@string/description"
            android:layout_marginBottom="@dimen/element_margin" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:layout_marginBottom="@dimen/element_margin"
            android:hint="@string/available_until_date" />

        <Spinner
            android:id="@+id/spinner_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_margin"
            android:hint="@string/category_selection" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_twotone_photo_camera_24"
                    android:text="@string/take_photo" />

                <Button
                    android:id="@+id/button_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_twotone_image_24"
                    android:text="@string/image_upload" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="@dimen/element_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_twotone_image_24"
                android:visibility="invisible" />

        </LinearLayout>

        <Button
            android:id="@+id/button_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/publish" />

    </LinearLayout>

</ScrollView>