<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.PostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_post"
                android:layout_width="match_parent"
                android:layout_height="259dp"
                android:layout_marginBottom="@dimen/element_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/textView_descriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/description_title" />

                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_progress"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/element_margin" />

                <TextView
                    android:id="@+id/textView_datePostedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/date_posted_title" />

                <TextView
                    android:id="@+id/textView_datePosted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_progress"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/element_margin" />

                <TextView
                    android:id="@+id/textView_distanceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/distance_title" />

                <TextView
                    android:id="@+id/textView_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_progress"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/element_margin" />

                <TextView
                    android:id="@+id/textView_userTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/user_title" />

                <TextView
                    android:id="@+id/textView_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/element_margin"
                    android:text="@string/loading_progress" />

                <TextView
                    android:id="@+id/textView_ratingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating_title"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <RatingBar
                    android:id="@+id/ratingBar_rating"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:theme="@style/Widget.AppCompat.RatingBar"
                    android:visibility="invisible" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_baseline_add_comment_white_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>